samples/_failures_safe/1761183546_910281_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_faedae15.c: In function ‘tokenize’:
./samples/SAFE/__tmp_faedae15.c:163:15: error: expected ‘;’ at end of input
  163 |         strcpy
      |               ^
      |               ;
./samples/SAFE/__tmp_faedae15.c:163:9: error: expected declaration or statement at end of input
  163 |         strcpy
      |         ^~~~~~
./samples/SAFE/__tmp_faedae15.c:163:9: error: expected declaration or statement at end of input
